@@ -1,3 +1,11 @@
+2005-05-17 Magnus Hagdorn
+ * glide_types.f90: added variable basal heat flux
+ * glide_vars.def: ditto
+ * glide_temp.f90: replaced scalar geothermal heat flux with variable
+   basal heat flux
+ * glide.f90: initialise variable basal heat flux with scalar geothermal 
+   heat flux
+
 2005-05-17 Ian Rutt
  * Added test example for energy-balance mass-balance scheme
  * Changed mass-balance schemes to only calculate 'land' points (i.e. mask
